Revert "fix alignment issue"
This reverts commit 9784518935ae8d7da5ec4bd454f0fc6f91b52444.

--- a/css/home-main.css
+++ b/css/home-main.css
@@ -107,7 +107,7 @@ h6 {
     display: inline-block;
     font-size: 16pt;
     transition-duration: 0.2s;
-    padding: .4em .4em 0em 0em;
+    padding: .4em;
 }
 
 .link:hover {
