--- a/css/home-phone.css
+++ b/css/home-phone.css
@@ -36,6 +36,7 @@
 
     .link {
     	font-size: 16px;
+    	margin-left: .2em;
     	margin-right: .2em;
     }
 }
